## [3.0.9] - not release yet
 * @todo Annotate an ellipse with five clicks on the border (https://gitlab.com/vgg/via/-/issues/279)

## [3.0.8] - 01 July 2020
 * audio amplitude shown in temporal segmentation timeline (experimental feature, hence disabled by default)
 * HTML application (https://gitlab.com/vgg/via/-/blob/via-3.x.y/via-3.x.y/scripts/io/via3_video_annotation_to_coco.html) to export frame level video annotations in COCO format
 * if attribute values shown as rows of temporal segmenter contains numbers, they will be sorted numerically
 * add/delete of timeline entries
 * timeline list can now be reordered using Ctrl + up/down arrow
 * fixed issue with nested spatial region selection

## [3.0.7] - 07 May 2020
 * value (instead of key) shown for SELECT type attributes in video timeline
 * users can select the number of timeline that can be seen at any time
 * timeline entries are taken from both attribute options and new values contained in metadata
 * selected temporal segment can be moved using up/down arrow key to the previous/next timeline
 * added n/p shorcut keys for image annotator to move to next/previous image
 * improve code documentation by adding a description of the structure of VIA3 project json file (see via-3.x.y/CodeDoc.md)
 * added demo for annotation of image pairs (see via/via-3.x.y/dist/demo/via_pair_annotator.html)

## [3.0.6] - 20 August 2019
 * file and spatial metadata editors are now collapsable
 * spatial regions are automatically associated with the selected temporal segment
 * added n/p keyboard shortcut keys to move to next/previous frame
 * spatial metadata z-index increased to avoid hiding behind temporal segment editor

## [3.0.5] - 14 August 2019
 * pack script creates target folders if they are missing (merge request 21)
 * VIA now allows the extreme clicking annotation method for defining rectangular (merge request 22) and circular regions
 * circle selection issue fixed
 * bulk add file uri issue fixed (issue 206)